welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
 def hunt(c:Color) {
     while(!estSurBiscuit){
   	if(isFacingTrail()==true){
   	baisseBrosse();
   	leveBrosse();
   	avance();
   	}else{
   		gauche();
   	}  
}
baisseBrosse();
prendBiscuit();
 }


def isFacingTrail():Boolean = {
if(estFaceMur()==true){
	return false
}
avance();
if(getCouleurSol()==c:Color){
	recule();
	return true
}else{
	recule();
	return false
}
} 

